# Traffic-Proccessor-SWP-46

./: CHANGELOG.md  CommunicationNode.py  README.md  lychee.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: course-task.md  other-pbis.md  quality-requirements.md  user-story.md
.github/workflows/: link-checking.yml  main.yml
docs/: development-process.md  quality-requirement-tests.md  quality-requirements-tests.md  quality-requirements.md  quality-requirments.md  roadmap.md  user-acceptance-tests.md  user-stories.md
docs/architecture/: README.md
gate/: Dockerfile  app.py
gitlab/merge_request_templates/: Default.md
reports/week2/: README.md  analysis.md  customer-meeting-summary.md  mvp-v0-report.md  user-stories.md
reports/week3/: customer-review-summary.md  customer-review-transcript.md  reflection.md  retrospective.md
reports/week4/: README.md  customer-review-summary.md  customer-review-transcript.md  llm-report.md  reflection.md  retrospective.md
reports/week5/: README.md
src/: docker-compose.gate.yml  docker-compose.yml  qr_test.py
src/Traffic_Processor/: Dockerfile.tproc  cn.py  test_TP+CN.py  tproc.py  tproc_guide.md
src/cnss/: .dockerignore  .env_template  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml  server.md
src/cnss/app/: main.py
src/cnss/app/core/: config.py
src/cnss/app/core/database/: base_repository.py  setup_db.py
src/cnss/app/migration/: env.py
src/cnss/app/schemes/: packet.py
src/cnss/app/static/: app.js  index.html  styles.css
src/gate/: app.py
src/mock_target/: Dockerfile  app.py
(+4 files in other folders)
